--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,12 +57,19 @@ jobs:
           images: ghcr.io/${{ github.repository }}
 
       - name: build and push
+        id: push
         uses: docker/build-push-action@v6.14.0
         with:
           push: true
-          provenance: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2.2.0
+        with:
+          subject-name: ghcr.io/${{ github.repository }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
 
   release:
     runs-on: ubuntu-latest
