--- a/src/Anvil.Server/Anvil.Server.csproj
+++ b/src/Anvil.Server/Anvil.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <Title>Anvil Server</Title>
@@ -6,6 +6,7 @@
         <AssemblyName>anvil-server_$(RuntimeIdentifier)</AssemblyName>
         <InvariantGlobalization>true</InvariantGlobalization>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <UserSecretsId>a0310955-0975-487c-80e5-7090a8e71917</UserSecretsId>
     </PropertyGroup>
 
     <PropertyGroup Label="Publishing">
@@ -37,8 +38,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DnsClient" Version="1.8.0"/>
-        <PackageReference Include="Mediator.Abstractions" Version="2.1.7"/>
+        <PackageReference Include="DnsClient" Version="1.8.0" />
+        <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
         <PackageReference Include="Mediator.SourceGenerator" Version="2.1.7">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
