build: define container tags manually
to avoid publishing the full SHA as tags, which is just cluttering the version listing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,9 @@ jobs:
         uses: docker/metadata-action@v5.6.1
         with:
           images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: build and push
         id: push
