--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v6.15.0
         with:
           push: true
-          file: src/Anvil.Server/Dockerfile
+          file: Dockerfile
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
 
