chore: flatten test project directory structure

--- a/test/Anvil.Server.Unit.Tests/Anvil.Server.Unit.Tests.csproj
+++ b/test/Anvil.Server.Unit.Tests/Anvil.Server.Unit.Tests.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\src\Anvil.Server\Anvil.Server.csproj" />
+        <ProjectReference Include="..\..\src\Anvil.Server\Anvil.Server.csproj" />
     </ItemGroup>
 
 </Project>
